# n8nDesktop

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  forge.config.mts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.main.config.mts  vite.preload.config.mts  vite.renderer.config.mts  vitest.config.ts
.specify/memory/: constitution.md
design/: ARCHITECTURE.md
documentation/: TECHNICAL_ARCHITECTURE.md  USER_GUIDE.md
documentation/design/: AI_DEBUGGING.md  ARCHITECTURE.md  DOCLING_N8N_ELECTRON.md  DOCLING_PLANNING.md  IPC_RECOMMENDATIONS.md
n8n-extensions/n8n-nodes-desktop/: eslint.config.mjs  package.json  tsconfig.json
n8n-extensions/n8n-nodes-desktop/lib/: bridge-client.ts
resources/: .gitkeep
resources/workflows/: docling-batch-summarize.json  docling-single-document.json
specs/001-n8n-desktop-app/: spec.md
specs/001-n8n-desktop-app/checklists/: requirements.md
specs/002-ui-design/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-design/checklists/: requirements-quality.md  requirements.md
specs/002-ui-design/contracts/: ipc-api.ts
specs/003-docling-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-docling-integration/checklists/: ai-debugging.md  requirements.md
specs/003-docling-integration/contracts/: openapi.yaml
specs/003-docling-integration/testing/: playwright-mcp.md
specs/009-custom-n8n-nodes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-custom-n8n-nodes/checklists/: requirements.md
specs/009-custom-n8n-nodes/contracts/: electron-bridge-api.yaml  n8n-node-interfaces.ts
specs/010-workflow-execution-popup/: checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-workflow-execution-popup/checklists/: comprehensive.md
specs/010-workflow-execution-popup/contracts/: ipc-contracts.ts
src/docling/: pyproject.toml
src/docling/src/docling_service/: __init__.py  main.py
src/docling/src/docling_service/api/: __init__.py  middleware.py  models.py  routes.py
src/docling/src/docling_service/core/: __init__.py  config.py  converter.py  logging.py  queue.py  tempfiles.py
src/docling/src/docling_service/utils/: __init__.py  markdown.py
src/docling/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_converter.py  test_markdown.py  test_queue.py
src/docling/tests/fixtures/: README.md
src/main/: config-manager.ts  docling-manager.ts  index.ts  n8n-manager.ts  types.d.ts
src/main/ipc-handlers/: docling.ts  index.ts  storage.ts  updates.ts  workflow-execution.ts  workflows.ts
src/main/services/: ai-service-tester.ts  backup-manager.ts  electron-bridge.ts  n8n-auth-manager.ts  n8n-credential-sync.ts  update-checker.ts  workflow-executor.ts
src/n8n_nodes/: package-lock.json
src/preload/: index.ts  types.ts
src/renderer/: index.html
templates/: ai-chat.json  automation.json  contract-comparator.json  document-summarizer.json  email-classifier.json  pdf-processing.json  scrape_web_page.json  summarizer2.json  summarizer3.json  web-page-summarizer.json
tests/: setup.ts
tests/e2e/: app.spec.ts  workflow-popup.spec.ts
tests/integration/: docling-service.test.ts  ipc-handlers.test.ts
(+103 files in other folders)
